--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <H1>HELLO WORLD!</H1>
+    <P>This is the firt file in my new git repo</P>
+     <P>This line is here to show how merging works</P> 
+     <P>This line is here to show how merging works</P> 
+
 </body>
 </html>
